--- a/checkout-cart/src/App.css
+++ b/checkout-cart/src/App.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: right;
 }
+
 h1 {
     font-size: 1.5rem;
     font-weight: bold;
@@ -21,10 +22,6 @@ h1 {
     border-radius:0.5 rem;
 }
 
-.row {
-    display: flex;
-    justify-content: space-between;
-  }
 .remove {
     display: block;
     float: right;
@@ -39,9 +36,6 @@ h1 {
     display: flex;
     justify-content: space-between;
   }
-.row.center {
-align-items: center;
-}
 img.imgs {
     max-height: 15rem;
   }
@@ -66,11 +60,14 @@ img.imgs {
   }
 
 button {
-    font-size: 0.8rem;
-    border: 0.1rem #404040 solid;
-    background-color: #f0c040;
-    width: 100%;
-    cursor: pointer;
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  margin: 0.1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #404040 solid;
+  background-color: #f0c040;
+  width: 100%;
+  cursor: pointer;
 
   }
 
@@ -79,6 +76,13 @@ button {
     align-items: right;
     margin:10px;
     border-radius: 0.5 rem;
+
+}
+button.delete {
+  width: 1.5rem;
+  align-items: right;
+  margin:10px;
+  border-radius: 0.5 rem;
 
 }
 .icon {
