--- a/checkout-cart/src/App.css
+++ b/checkout-cart/src/App.css
@@ -20,6 +20,13 @@ a {
 .row.center {
   align-items: center;
 }
+.item{
+  display: flex;
+  justify-content: space-between;
+}
+.item.center{
+  align-items: center;
+}
 .col-1 {
   flex: 1;
 }
@@ -28,9 +35,9 @@ a {
 }
 .block {
   background-color: #e0e0e0;
+  margin: 0.7rem;
+  border-radius: 0.6rem;
   padding: 1rem;
-  margin: 0.5rem;
-  border-radius: 0.5rem;
 }
 .text-right {
   text-align: right;
@@ -39,18 +46,25 @@ img.itemImg {
   max-height: 15rem;
 }
 button {
+  border:none;
   font-size: 0.8rem;
-  padding: 0.2rem;
-  margin: 0.1rem;
-  border-radius: 0.5rem;
-  border: 0.1rem #404040 solid;
-  background-color: #f0c040;
+  padding: 0.3rem;
+  margin: 0.2rem;
+  border-radius: 0.3rem;
+  background-color:  #e48100;
   width: 100%;
   cursor: pointer;
 }
+.hoverBtn{
+  color:white;
+}
+.hoverBtn:hover {
+  background-color:#e45c02 ;
+  color:white;
+ }
 button.add {
-  margin-left: 70px;
-  background-color: #40c0f0;
+  margin-left:20px;
+  background-color: #e45c02;
   width: 1.5rem;
 }
 .removeSingleItem{
