--- a/checkout-cart/src/App.css
+++ b/checkout-cart/src/App.css
@@ -1,9 +1,13 @@
-.app {
-    background-color: rgb(255, 255, 255);
-    padding: 30px;
-    height: 100vh;
-    display: flex;
-    justify-content: right;
+.App {
+    background-image: url("https://i0.hdslb.com/bfs/article/da36a619b56cfbe47159272fee381323affe3a32.jpg");
+    min-width: 100%;
+    background-size:cover;
+    background-position: center;
+}
+.joinImg{
+  width:100%;
+  max-height: 10rem;
+  text-align: center;
 }
 
 .title{
@@ -13,37 +17,74 @@
 a {
   text-decoration: none;
 }
-.row {
+.container{
   display: flex;
   justify-content: space-between;
-}
-.row.center {
   align-items: center;
+  margin-top: 125px;
+  flex:1;
 }
+
 .item{
   display: flex;
   justify-content: space-between;
-}
-.item.center{
   align-items: center;
 }
+
+
 .col-1 {
   flex: 1;
 }
-.col-2 {
-  flex: 2;
-}
+
 .block {
+  
   background-color: #e0e0e0;
   margin: 0.7rem;
   border-radius: 0.6rem;
   padding: 1rem;
+  margin-top:440px;
+}
+li {
+  list-style-type: none;
+
+}
+a
+{
+  text-decoration: none;
+}
+nav {
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: inter;
+  min-height: 7vh;
+}
+.navBar{
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+
+}
+.games{
+  background-color: #e0e0e0;
+  margin-top: 425px;
+  border-radius: 0.6rem;
+  padding: 1rem;
+  flex:1;
 }
 .text-right {
   text-align: right;
 }
 img.itemImg {
   max-height: 15rem;
+}
+.entry {
+  display: flex;
+  justify-content: space-between;
+}
+.entry.center {
+  align-items: center;
 }
 button {
   border:none;
