--- a/checkout-cart/src/App.css
+++ b/checkout-cart/src/App.css
@@ -117,9 +117,9 @@ button {
   background-color:#e45c02 ;
   color:white;
  }
-button.add {
+.add {
   margin-left:80px;
-  background-color: #e45c02;
+  background-color: #ffe819;
   width: 1.5rem;
 }
 .removeSingleItem{
@@ -131,4 +131,10 @@ button.add {
 }
 .total{
   font-weight: bold;
+}
+
+.submit{
+  background-color:  #ffe819;
+  border-radius: 0.3rem;
+  margin-left:80px;
 }
