--- a/checkout-cart/src/App.css
+++ b/checkout-cart/src/App.css
@@ -93,6 +93,7 @@ margin-top: 30px;
 position: relative;
 border-radius: 0.6rem;
 padding: 1rem;
+height:500px;
 
 }
 
@@ -117,7 +118,7 @@ padding: 0.3rem;
 margin: 0.2rem;
 border-radius: 0.3rem;
 background-color:  #e48100;
-width: 100%;
+min-width: auto;
 cursor: pointer;
 }
 .hoverBtn{
@@ -132,6 +133,7 @@ color:white;
 
 background-color: #ffe819;
 width: 1.5rem;
+
 }
 .removeSingleItem{
 background-color: #f04040;
