--- a/checkout-cart/src/App.css
+++ b/checkout-cart/src/App.css
@@ -1,146 +1,143 @@
 .App {
   background-image: url("https://i0.hdslb.com/bfs/article/da36a619b56cfbe47159272fee381323affe3a32.jpg");
-  background-size:cover;
+  background-size: cover;
   background-position: center;
   width: auto;
 }
-.joinImg{
-width:100%;
-max-height: 10rem;
-height: auto;
-text-align: center;
+.joinImg {
+  width: 100%;
+  max-height: 10rem;
+  height: auto;
+  text-align: center;
 }
-
-.title{
-font-weight: bold;
-font-size: auto;
-
+.ant {
+  color: "white";
+  align-items: "center";
+  margin-right: "5px";
+}
+.title {
+  font-weight: bold;
+  font-size: auto;
 }
 a {
-text-decoration: none;
+  text-decoration: none;
 }
-.container{
+.container {
   height: auto;
   min-width: 100%;
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-top: 125px;
-flex:1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 125px;
+  flex: 1;
 }
-.foot{
-background-color: #ffffff;
-text-align: center;
-font-size: large;
-padding: 1rem;
-margin-top:440px;
-margin: 0.7rem;
+.foot {
+  background-color: #ffffff;
+  text-align: center;
+  font-size: large;
+  padding: 1rem;
+  margin-top: 440px;
+  margin: 0.7rem;
 }
-.item{
-display: flex;
-justify-content: space-between;
+.item {
+  display: flex;
+  justify-content: space-between;
 
-align-items: center;
+  align-items: center;
 }
 
-.boldtext{
-font-weight: bold;
-margin-top:20px;
-font-size: large;
+.boldtext {
+  font-weight: bold;
+  margin-top: 20px;
+  font-size: large;
 }
 .block {
-background-color: #e4e1e1;
-margin: 0.7rem;
-border-radius: 0.6rem;
-padding: 1rem;
-margin-top:440px;
-position:block ;
+  background-color: #e4e1e1;
+  margin: 0.7rem;
+  border-radius: 0.6rem;
+  padding: 1rem;
+  margin-top: 440px;
+  position: block;
 }
 li {
-list-style-type: none;
-font-weight: bold;
-font-family: comic sans MS;
-font-size: 18px;
-color: white;
+  list-style-type: none;
+  font-weight: bold;
+  font-family: comic sans MS;
+  font-size: 18px;
+  color: white;
 }
-a
-{
-text-decoration: none;
+a {
+  text-decoration: none;
 }
 nav {
-
-display: flex;
-justify-content: space-around;
-align-items: center;
-min-height: 6vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 6vh;
 }
-.navBar{
-display: flex;
-justify-content: space-around;
-width: 40%;
-
+.navBar {
+  display: flex;
+  justify-content: space-around;
+  width: 40%;
 }
-.games{
-background-color: #e0e0e0;
-margin-top: 425px;
-border-radius: 0.6rem;
-padding: 1rem;
-flex:2;
+.games {
+  background-color: #e0e0e0;
+  margin-top: 425px;
+  border-radius: 0.6rem;
+  padding: 1rem;
+  flex: 1;
 }
-.order{
-background-color: #e0e0e0;
-margin-top: 30px;
-position: relative;
-border-radius: 0.6rem;
-padding: 1rem;
-height:500px;
-
+.order {
+  background-color: #e0e0e0;
+  margin-top: 30px;
+  position: relative;
+  border-radius: 0.6rem;
+  padding: 1rem;
+  height: 580px;
 }
 
 .text-right {
-text-align: right;
+  text-align: right;
 }
 img.itemImg {
-max-height: 15rem;
-
+  max-height: 15rem;
+  max-width: 15rem;
 }
 .entry {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .entry.center {
-align-items: center;
+  align-items: center;
 }
 button {
-border:none;
-font-size: 0.8rem;
-padding: 0.3rem;
-margin: 0.2rem;
-border-radius: 0.3rem;
-background-color:  #e48100;
-min-width: auto;
-cursor: pointer;
+  border: none;
+  font-size: 0.8rem;
+  padding: 0.3rem;
+  margin: 0.2rem;
+  border-radius: 0.3rem;
+  background-color: #e48100;
+  min-width: auto;
+  cursor: pointer;
 }
-.hoverBtn{
-color:white;
-font-weight: bold;
+.hoverBtn {
+  color: white;
+  font-weight: bold;
 }
 .hoverBtn:hover {
-background-color:#e45c02 ;
-color:white;
+  background-color: #e45c02;
+  color: white;
 }
 .add {
-
-background-color: #ffe819;
-width: 1.5rem;
-
+  background-color: #ffe819;
+  width: 1.5rem;
 }
-.removeSingleItem{
-background-color: #f04040;
-width: 1.5rem;
+.removeSingleItem {
+  background-color: #f04040;
+  width: 1.5rem;
 }
 .removeAll {
-  margin-left:10px;
+  margin-left: 10px;
 }
 .up {
   display: none;
@@ -153,26 +150,37 @@ width: 1.5rem;
   background-color: white;
   position: absolute;
 }
-.total{
-font-weight: bold;
+.total {
+  font-weight: bold;
 }
-.empty{
+.empty {
   scale: 0.5;
 }
 
-.submit{
-border:none;
-font-size: 0.8rem;
-padding: 0.3rem;
-margin: 0.2rem;
-border-radius: 0.3rem;
-background-color:  #e48100;
-color:white;
-font-weight: bold;
-cursor: pointer;
+.submit {
+  border: none;
+  font-size: 0.8rem;
+  padding: 0.3rem;
+  margin: 0.2rem;
+  border-radius: 0.3rem;
+  background-color: #e48100;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+.navg{
+  border: none;
+  font-size: 0.8rem;
+  padding: 0.3rem;
+  margin: 0.2rem;
+  font-size: large;
+  border-radius: 0.2rem;
+  background-color: #0a607a;
+  min-width: auto;
+  color:white;
+  cursor: pointer;
 }
 .submit:hover {
-background-color:#e45c02 ;
-color:white;
+  background-color: #e45c02;
+  color: white;
 }
-
